[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/leoStuff/mini_game5/mini_game5.gd" type="Script" id=1]
[ext_resource path="res://Scenes/mimistuff/02 roulette animation/roulette.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/Overlock/Overlock-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/leoStuff/mini_game5/mini5Art/needle.png" type="Texture" id=4]
[ext_resource path="res://Scenes/leoStuff/mini_game5/mini5Art/Roulette_Mini_game.png" type="Texture" id=5]
[ext_resource path="res://Scenes/leoStuff/mini_game1/art/win.png" type="Texture" id=6]
[ext_resource path="res://Scenes/leoStuff/mini_game1/art/lose.png" type="Texture" id=7]
[ext_resource path="res://Scenes/leoStuff/mini_game1/art/back.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("WL:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WL/text:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "lose"
tracks/0/type = "value"
tracks/0/path = NodePath("WL:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WL/text:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "win"
tracks/0/type = "value"
tracks/0/path = NodePath("WL/text:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WL:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="back" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Red" type="Button" parent="."]
margin_left = 1026.0
margin_top = 938.0
margin_right = 1196.0
margin_bottom = 1018.0
custom_fonts/font = SubResource( 1 )
text = "RED"

[node name="Black" type="Button" parent="."]
margin_left = 713.0
margin_top = 938.0
margin_right = 883.0
margin_bottom = 1018.0
custom_fonts/font = SubResource( 2 )
text = "Black"

[node name="base" parent="." instance=ExtResource( 2 )]
position = Vector2( 960, 540 )
scale = Vector2( 0.747853, 0.747853 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="winLogo" type="Node2D" parent="."]
visible = false
z_index = 20

[node name="WL" type="Node2D" parent="winLogo"]
modulate = Color( 1, 1, 1, 0 )
z_index = 20

[node name="back" type="Sprite" parent="winLogo/WL"]
texture = ExtResource( 8 )
centered = false

[node name="text" type="Sprite" parent="winLogo/WL"]
texture = ExtResource( 7 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="winLogo"]
anims/RESET = SubResource( 3 )
anims/lose = SubResource( 4 )
anims/win = SubResource( 5 )

[connection signal="pressed" from="Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Black" to="." method="_on_Black_pressed"]

[editable path="base"]
